# AOS-Solver

./: BuildSolverWrapper.sh  CMakeLists.txt  compile_commands.json  et --soft [hash]  mdpNN.pt  mdpNN_deteministic.pt  mdpNN_prob.pt  temp.txt
examples/cpp_models/Bp/src/: Bp.cpp  Bp.h  globals.h
examples/cpp_models/Bp_with_int_model/: CMakeLists.txt
examples/cpp_models/Bp_with_int_model/src/: Bp_with_int_model.cpp  Bp_with_int_model.h  closed_model.cpp  closed_model.h
examples/cpp_models/collectValuableToys/: CMakeLists.txt
examples/cpp_models/collectValuableToys/src/: closed_model.cpp  closed_model.h  collectValuableToys.cpp  collectValuableToys.h  globals.h  main.cpp
examples/cpp_models/collect_toys/: CMakeLists.txt
examples/cpp_models/collect_toys/src/: collect_toys.cpp  collect_toys.h  globals.h  main.cpp
examples/cpp_models/example/: CMakeLists.txt
examples/cpp_models/example/src/: example.cpp  example.h  globals.h  main.cpp
examples/cpp_models/icaps/: CMakeLists.txt
examples/cpp_models/icaps/src/: actionManager.h  icaps.cpp  icaps.h  mongoDB_Bridge.cpp
examples/cpp_models/icaps2/: CMakeLists.txt
examples/cpp_models/icaps2/src/: icaps2.cpp  icaps2.h  main.cpp
examples/cpp_models/icaps3/: CMakeLists.txt
examples/cpp_models/icaps3/src/: icaps3.cpp  icaps3.h  main.cpp
examples/cpp_models/icaps_working_toy/: CMakeLists.txt
examples/cpp_models/icaps_working_toy/src/: actionManager.cpp  globals.h  icaps.cpp  icaps.h  state_var_types.cpp  state_var_types.h
examples/cpp_models/iros/: CMakeLists.txt
examples/cpp_models/iros/src/: closed_model.cpp  closed_model.h  globals.h  iros.cpp  iros.h
examples/cpp_models/pocman/src/: main.cpp
examples/cpp_models/robocup_cleanroom/: CMakeLists.txt
examples/cpp_models/robocup_cleanroom/src/: main.cpp  robocup_cleanroom.cpp  robocup_cleanroom.h  state_var_types.cpp
examples/cpp_models/robocup_findmates/: CMakeLists.txt
examples/cpp_models/robocup_findmates/src/: globals.h  main.cpp  robocup_findmates.cpp  robocup_findmates.h  state_var_types.h
examples/cpp_models/temp/: CMakeLists.txt
examples/cpp_models/temp/src/: main.cpp
examples/cpp_models/tiger/: tiger
examples/cpp_models/turtleBotVisitLocations/: CMakeLists.txt
examples/cpp_models/turtleBotVisitLocations/src/: closed_model.cpp  closed_model.h  turtleBotVisitLocations.cpp  turtleBotVisitLocations.h
examples/pomdpx_models/: pomdpx
examples/pomdpx_models/data/: test.pomdpx
include/despot/: config.h  evaluator.h
include/despot/core/: belief.h  globals.h  node.h  pomdp.h  solver.h
include/despot/model_primitives/Bp/: actionManager.h  enum_map_Bp.h  state.h  state_var_types.h
include/despot/pomdpx/: pomdpx.h
include/despot/solver/: pomcp.h
include/despot/util/: logging.h  mongoDB_Bridge.h
src/: backward.cpp  backward.hpp  evaluator.cpp  simple_tui.cpp
src/core/: aos_domain.cpp  belief.cpp  mdp.cpp  node.cpp  policy.cpp  pomdp.cpp  solver.cpp
src/model_primitives/Bp/: actionManager.cpp  enum_map_Bp.cpp  state.cpp
src/model_primitives/Bp_with_int_model/: actionManager.cpp  closed_model_policy.cpp  enum_map_Bp_with_int_model.cpp  state.cpp
src/model_primitives/collectValuableToys/: actionManager.cpp  closed_model_policy.cpp  enum_map_collectValuableToys.cpp
src/model_primitives/collect_toys/: actionManager.cpp  closed_model_policy.cpp  enum_map_collect_toys.cpp
src/model_primitives/example/: actionManager.cpp  closed_model_policy.cpp  enum_map_example.cpp
src/model_primitives/icaps/: actionManager.cpp  enum_map_icaps.cpp  state.cpp  state_var_types.cpp
src/model_primitives/icaps2/: actionManager.cpp  enum_map_icaps2.cpp  state.cpp
src/model_primitives/icaps3/: actionManager.cpp  enum_map_icaps3.cpp  state.cpp
src/model_primitives/iros/: actionManager.cpp  closed_model_policy.cpp
src/model_primitives/turtleBotVisitLocations/: actionManager.cpp  closed_model_policy.cpp  enum_map_turtleBotVisitLocations.cpp
src/solver/: despot.cpp  pomcp.cpp  torch_model.hpp
src/util/: logging.cpp  mongoDB_Bridge.cpp  random.cpp
(+32 files in other folders)
